	  warning from src/up_ssd1289.c.  From Laurent Latil (2013-5-15).
	* configs/hymini-stm32v/src/up_r61505u.c:   Support for the R65105-
	  based LCD that comes with some HY-Mini STM32v board.  From Christian
	  Faure (2013-5-16).
	* syscall/syscall_lookup.h:  Missing underscore character in SYS_onexit.
	  Reported by Ken Pettit (2013-5-17).
	* nuttx/syscall/syscall.csv:  Type of first parameter of on_exit() is
	  wrong. Reported by Ken Pettit (2013-5-17).
	* configs/mikroe-stm32f4/kernel/, kostest/ and scripts/:  Add kernel build
	  support and kernel mode OS test example for the the MikroElektronkia
	  MultiMedia STM32 M4 board.  From Ken Pettit (2013-5-17).
	* arch/arm/include/stm32/chip.h and arch/arm/src/stme32/chip/stm32l15xxx_pinmap.h:
	  Beginning of support for the STM32L15X family (2013-5-18).
	* arch/arm/include/stm32/stm32l15xxx_irq.h and arch/arm/src/stm32/chip/stm32l15xxx_vectors.h:
	  Support for STM32L15X interrupt vectors (2013-5-18).
	* arch/arm/src/stm32/chip/stm32l15xxx_gpio.h and related STM32 GPIO files:
	  Add GPIO support for the STM32L215X (2013-5-18).
	* arch/arm/src/stm32/chip/stm32l15xxx_memorymap.h: STM32L215X memory map
	 (2013-5-18).
	* arch/arm/src/stm32/chip/stm32_pwr.h, stm32fl15xxx_rcc.h, and stm32l15xxx_syscfg.h:
	  More updates for the STM32L152 (2013-5-19).
	* configs/stm32ldiscovey: Configuration for the STM32L-Discovery board.
	  Still does not build on initial check-in (2013-5-19)
	* STM32L15X:  Add DMA and UART start.  Correctly initialize the heap
	  (2013-5-19).
	* arch/arm/src/stm32/stm32l15xxx_rcc.c chip/stm32_flash.h:  Add RCC PLL
	  and FLASH configuration logic for the STM32L152X (2013-5-19).
	* include/nuttx/usb/audio.h:  Typo- and bug-fixes from Ken Pettit
	  (2013-5-19)
	* audio/, drivers/audio, include/nuttx/audio.h:  Add a new audio subsystem
	  and jVS1053 driver to NuttX.  Contributed by Ken Pettit (2013-5-19).
	* configs/miroe-stm32f4/:  Add audio logic to NSH configuration.  From Ken
	  Petty (2013-5-19).