@@ -68,7 +68,7 @@ ifeq ($(CONFIG_ELF),y)
 CMN_CSRCS += up_elf.c
 endif
 
-CHIP_ASRCS  = 
+CHIP_ASRCS  =
 CHIP_CSRCS  = lm_allocateheap.c lm_start.c lm_syscontrol.c lm_irq.c
 CHIP_CSRCS += lm_gpio.c lm_gpioirq.c lm_timerisr.c lm_lowputc.c lm_serial.c
 CHIP_CSRCS += lm_ssi.c lm_dumpgpio.c
@@ -79,4 +79,8 @@ endif
 
 ifdef CONFIG_NET
 CHIP_CSRCS += lm_ethernet.c
+endif
+
+ifdef CONFIG_LM_FLASH
+CHIP_CSRCS += lm_flash.c
 endif
